# autograd.c

./: .gitignore  CMakeLists.txt  CODESTYLE.md  CODE_STYLE.md  CONTRIBUTING.md  Dockerfile  Makefile  README  README.md  TODO  TODO.md  cppcheck-suppressions.txt  entitlements.plist  main.c  suppr.txt  test_output.txt  test_output_new.txt
archive/: CMakeLists.txt  main.c
archive/src/datasets/: cifar10.c
archive/src/tensor/: reshape.c  reshape.h  tensor.c
archive/tensor/: ops.c  ops.h
archive/test/: test_ops.c
archive/utils/: defer.h
debug_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  binary  cmake_install.cmake  test_arithmetic_binary
docs/: DESIGN.md  README  about.md  autodiff.py  backward_explanation.md  design.md  jax_inverse_function.ipynb  pytorch_ast_optimization.py  requirements.txt
src/: activations.c  activations.h  augment.c  augment.h  autograd.c  autograd.c.bak  autograd.h  autograd.h.bak  benchmark.h  cifar10.c  cifar10.h  convolutions.c  convolutions.h  go.h  layers.c  layers.h  losses.c  losses.h  main.c  model.c.bak  optimizers.c  optimizers.h  tensor.c  tensor.h  tensor_autograd.c  tensor_autograd.h  tensor_backward.c  tensor_backward.h  tqdm.h
src/dataloader/: cifar10.h
src/datasets/: cifar10.c  cifar10.h
src/eval/: metrics.c  metrics.h
src/math/: metrics.c  metrics.h
src/ops/: activations.c  activations.h  activations_backward.c  activations_backward.h  arithmetic.c  arithmetic.h  arithmetic_backward.c  arithmetic_backward.h  artihmetic_backward-------.txt  convolutions.c  convolutions.h  convolutions_backward.c  convolutions_backward.h  losses.c  losses.h  losses_backward.c  losses_backward.h  reductions.c  reductions.h  reductions_backward.c  reductions_backward.h  reshapes.c  reshapes.h  reshapes_backward.c  reshapes_backward.h
src/tensor/: autograd.c  autograd.h  broadcast.c  broadcast.h  ops.c  ops.h  reshape.c  reshape.h  tensor.c  tensor.h  tensor_internals.h
src/utils/: aligned_alloc.h  async.c  async.h  augment.c  augment.h  benchmark.h  cifar10.c  cifar10.h  go.c  go.h  green_thread.c  metrics.h  tqdm.c  tqdm.h  types.h
test/: test.c  test_activations.c  test_activations_autograd.c  test_activations_backward.c  test_arithmetic.c  test_arithmetic_autograd.c  test_arithmetic_backward.c  test_async.c  test_augment.c  test_autograd.c  test_broadcast.c  test_convolutions.c  test_convolutions_autograd.c  test_convolutions_autograd.c.bak  test_convolutions_backward.c  test_defer.c  test_empty.c  test_go.c  test_layers.c  test_losses.c  test_losses_autograd.c  test_losses_backward.c  test_metrics.c  test_ops.c  test_optimizers.c  test_reductions.c  test_reductions_autograd.c  test_reductions_backward.c  test_reshape.c  test_reshapes.c  test_reshapes_autograd.c  test_reshapes_backward.c  test_tensor.c
